--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^9.77.10",
+    "@react-three/fiber": "^8.13.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.3.1",
+    "gltf-loader": "^1.0.0",
+    "gltfjsx": "^6.2.5",
+    "gsap": "^3.12.2",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.2",
     "react-mapbox-gl": "^5.1.1",
     "react-scripts": "5.0.1",
+    "react-scroll-trigger": "^0.6.14",
+    "react-three-fiber": "^6.0.13",
+    "scrolltrigger-classes": "^0.3.6",
+    "three": "^0.154.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
